# chuck-says

./: .gitignore  LICENSE.md  README.md  pyproject.toml
chuck_says/: __init__.py  cli.py  cowsay.py
chuck_says/assets/: curated_facts
docs/: Gemfile  _config.yml  index.md
docs/_layouts/: default.html
docs/_posts/: 2019-06-09-welcome-to-jekyll.markdown
tests/: test_chuck_norris_facts.py
